sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:10: error: not found: value j
		if (plusPetit(j+1,j)==true) {
                              ^AlgCocktailSort1:11: error: not found: value j
			echange(j,j+1)
                                ^