sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
for (i <- getNombreValeurs()-2 to 0 by-1) {
	for (j <- 0 to i) {
		if (plusPetit(j+1,j)==true) {
			echange(j,j+1)
			}
}
	for(l<- i to 0) {
		if (plusPetit(j+1,j)==true) {
			echange(j,j+1)
			}
	}
}

}
